# waste-helper

./: .env.example  .gitignore  CONTEXT.md  Makefile  README.md  compose.yml
.ai/: AGENTS.md  AI.ignore
.github/: dependabot.yml
.github/workflows/: ci.yml
api-server/: .yo-rc.json  Dockerfile  Dockerfile.local  Dockerfile.simple  README.md  build.gradle  gradle.properties  package-lock.json  package.json  settings.gradle  sonar-project.properties
api-server/.devcontainer/: devcontainer.json
api-server/.jhipster/: DisposalGuide.json  FavoriteRegion.json  Feedback.json  NotificationSetting.json  Region.json  SearchHistory.json  WasteClassification.json  WasteImage.json  application.jdl
api-server/gradle/: libs.versions.toml  liquibase.gradle  spring-boot.gradle  war.gradle
docs/: architecture.md
frontend/: Dockerfile  README.md  appsmith-theme.css  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.tokens.js
frontend/.storybook/: main.ts  preview.tsx
frontend/components/: Button.jsx
frontend/constants/: config.ts
frontend/stories/: Button.stories.jsx
k8s/: README.md
k8s/argocd/: app.yaml
k8s/manifests/: api-server-deployment.yaml  frontend-deployment.yaml  grafana-deployment.yaml  (+10 more)
mock-vlm/: Dockerfile  README.md  app.py
scripts/: k8s-health-check.sh
ui/: compose.yaml
vlm-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
vlm-service/app/: __main__.py  config.py  grpc_server.py  main.py  prompt.py  vlm_engine.py
vlm-service/proto/: vlm_service.proto
vlm-service/tests/: test_health.py
(+294 files in other folders)
