[project]
name = "waste-helper-vlm"
version = "0.1.0"
description = "VLM microservice for waste classification using Qwen3-VL-4B"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=5.27.0",
    "pillow>=10.4.0",
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "accelerate>=1.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
